Fixed "preferencess however control elements bg colors"

--- a/themes/Frappe/Blue/userContent.css
+++ b/themes/Frappe/Blue/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #8caaee !important;
     --color-accent-primary-hover: rgb(160, 140, 238) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #8caaee !important;
+
     }
 
     groupbox{
