--- a/themes/Frappe/Maroon/userContent.css
+++ b/themes/Frappe/Maroon/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #ea999c !important;
     --color-accent-primary-hover: rgb(234, 191, 154) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #ea999c !important;
+
     }
 
     groupbox{
