--- a/themes/Frappe/Pink/userContent.css
+++ b/themes/Frappe/Pink/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f4b8e4 !important;
     --color-accent-primary-hover: rgb(244, 184, 198) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #f4b8e4 !important;
+
     }
 
     groupbox{
