--- a/themes/Frappe/Teal/userContent.css
+++ b/themes/Frappe/Teal/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #81c8be !important;
     --color-accent-primary-hover: rgb(130, 174, 200) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #81c8be !important;
+
     }
 
     groupbox{
