--- a/themes/Macchiato/Pink/userContent.css
+++ b/themes/Macchiato/Pink/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f5bde6 !important;
     --color-accent-primary-hover: rgb(245, 189, 202) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #f5bde6 !important;
+
     }
 
     groupbox{
