--- a/themes/Mocha/Sky/userContent.css
+++ b/themes/Mocha/Sky/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #89dceb !important;
     --color-accent-primary-hover: rgb(137, 171, 235) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #89dceb !important;
+
     }
 
     groupbox{
