--- a/themes/Frappe/Flamingo/userContent.css
+++ b/themes/Frappe/Flamingo/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #eebebe !important;
     --color-accent-primary-hover: rgb(238, 214, 190) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #eebebe !important;
+
     }
 
     groupbox{
