--- a/themes/Frappe/Green/userContent.css
+++ b/themes/Frappe/Green/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #a6d189 !important;
     --color-accent-primary-hover: rgb(137, 209, 144) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #a6d189 !important;
+
     }
 
     groupbox{
