--- a/themes/Frappe/Mauve/userContent.css
+++ b/themes/Frappe/Mauve/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #ca9ee6 !important;
     --color-accent-primary-hover: rgb(230, 158, 222) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #ca9ee6 !important;
+
     }
 
     groupbox{
