--- a/themes/Frappe/Rosewater/userContent.css
+++ b/themes/Frappe/Rosewater/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f2d5cf !important;
     --color-accent-primary-hover: rgb(242, 231, 208) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #f2d5cf !important;
+
     }
 
     groupbox{
