--- a/themes/Frappe/Sky/userContent.css
+++ b/themes/Frappe/Sky/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #99d1db !important;
     --color-accent-primary-hover: rgb(153, 176, 219) !important;
     --zen-colors-primary: #414559 !important;
+    --in-content-page-color: #c6d0f5 !important;
+    --in-content-box-background: #414559 !important;
+    --zen-primary-color: #99d1db !important;
+
     }
 
     groupbox{
