--- a/themes/Latte/Blue/userContent.css
+++ b/themes/Latte/Blue/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #1e66f5 !important;
     --color-accent-primary-hover: rgb(67, 31, 245) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #1e66f5 !important;
+
     }
 
     groupbox{
