--- a/themes/Latte/Lavender/userContent.css
+++ b/themes/Latte/Lavender/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #7287fd !important;
     --color-accent-primary-hover: rgb(163, 115, 253) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #7287fd !important;
+
     }
 
     groupbox{
