--- a/themes/Latte/Pink/userContent.css
+++ b/themes/Latte/Pink/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #ea76cb !important;
     --color-accent-primary-hover: rgb(234, 118, 145) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #ea76cb !important;
+
     }
 
     groupbox{
