--- a/themes/Latte/Red/userContent.css
+++ b/themes/Latte/Red/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #d20f39 !important;
     --color-accent-primary-hover: rgb(211, 71, 15) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #d20f39 !important;
+
     }
 
     groupbox{
