--- a/themes/Latte/Rosewater/userContent.css
+++ b/themes/Latte/Rosewater/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #dc8a78 !important;
     --color-accent-primary-hover: rgb(220, 188, 120) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #dc8a78 !important;
+
     }
 
     groupbox{
