--- a/themes/Latte/Sapphire/userContent.css
+++ b/themes/Latte/Sapphire/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #209fb5 !important;
     --color-accent-primary-hover: rgb(32, 85, 182) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #209fb5 !important;
+
     }
 
     groupbox{
