--- a/themes/Latte/Teal/userContent.css
+++ b/themes/Latte/Teal/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #179299 !important;
     --color-accent-primary-hover: rgb(23, 82, 153) !important;
     --zen-colors-primary: #ccd0da !important;
+    --in-content-page-color: #4c4f69 !important;
+    --in-content-box-background: #ccd0da !important;
+    --zen-primary-color: #179299 !important;
+
     }
 
     groupbox{
