--- a/themes/Macchiato/Flamingo/userContent.css
+++ b/themes/Macchiato/Flamingo/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f0c6c6 !important;
     --color-accent-primary-hover: rgb(240, 219, 198) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #f0c6c6 !important;
+
     }
 
     groupbox{
