--- a/themes/Macchiato/Green/userContent.css
+++ b/themes/Macchiato/Green/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #a6da95 !important;
     --color-accent-primary-hover: rgb(150, 218, 167) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #a6da95 !important;
+
     }
 
     groupbox{
