--- a/themes/Macchiato/Lavender/userContent.css
+++ b/themes/Macchiato/Lavender/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #b7bdf8 !important;
     --color-accent-primary-hover: rgb(210, 184, 248) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #b7bdf8 !important;
+
     }
 
     groupbox{
