--- a/themes/Macchiato/Maroon/userContent.css
+++ b/themes/Macchiato/Maroon/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #ee99a0 !important;
     --color-accent-primary-hover: rgb(238, 189, 154) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #ee99a0 !important;
+
     }
 
     groupbox{
