--- a/themes/Macchiato/Rosewater/userContent.css
+++ b/themes/Macchiato/Rosewater/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f4dbd6 !important;
     --color-accent-primary-hover: rgb(244, 234, 214) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #f4dbd6 !important;
+
     }
 
     groupbox{
