--- a/themes/Macchiato/Teal/userContent.css
+++ b/themes/Macchiato/Teal/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #8bd5ca !important;
     --color-accent-primary-hover: rgb(139, 187, 213) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #8bd5ca !important;
+
     }
 
     groupbox{
