--- a/themes/Macchiato/Yellow/userContent.css
+++ b/themes/Macchiato/Yellow/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #eed49f !important;
     --color-accent-primary-hover: rgb(225, 238, 160) !important;
     --zen-colors-primary: #363a4f !important;
+    --in-content-page-color: #cad3f5 !important;
+    --in-content-box-background: #363a4f !important;
+    --zen-primary-color: #eed49f !important;
+
     }
 
     groupbox{
