--- a/themes/Mocha/Blue/userContent.css
+++ b/themes/Mocha/Blue/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #89b4fa !important;
     --color-accent-primary-hover: rgb(151, 138, 250) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #89b4fa !important;
+
     }
 
     groupbox{
