--- a/themes/Mocha/Maroon/userContent.css
+++ b/themes/Mocha/Maroon/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #eba0ac !important;
     --color-accent-primary-hover: rgb(235, 186, 161) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #eba0ac !important;
+
     }
 
     groupbox{
