--- a/themes/Mocha/Mauve/userContent.css
+++ b/themes/Mocha/Mauve/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #cba6f7 !important;
     --color-accent-primary-hover: rgb(243, 167, 247) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #cba6f7 !important;
+
     }
 
     groupbox{
