--- a/themes/Mocha/Pink/userContent.css
+++ b/themes/Mocha/Pink/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f5c2e7 !important;
     --color-accent-primary-hover: rgb(245, 195, 207) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #f5c2e7 !important;
+
     }
 
     groupbox{
