--- a/themes/Mocha/Red/userContent.css
+++ b/themes/Mocha/Red/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #f38ba8 !important;
     --color-accent-primary-hover: rgb(243, 162, 139) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #f38ba8 !important;
+
     }
 
     groupbox{
