--- a/themes/Mocha/Sapphire/userContent.css
+++ b/themes/Mocha/Sapphire/userContent.css
@@ -59,6 +59,10 @@
     --color-accent-primary: #74c7ec !important;
     --color-accent-primary-hover: rgb(116, 138, 236) !important;
     --zen-colors-primary: #313244 !important;
+    --in-content-page-color: #cdd6f4 !important;
+    --in-content-box-background: #313244 !important;
+    --zen-primary-color: #74c7ec !important;
+
     }
 
     groupbox{
