Fixed Bookmarked not catppuccin themed

--- a/themes/Frappe/Green/userChrome.css
+++ b/themes/Frappe/Green/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #414559 !important;
+        --zen-primary-color: #a6d189 !important;
         --zen-colors-secondary: #414559 !important;
         --zen-colors-tertiary: #292c3c !important;
         --zen-colors-border: #a6d189 !important;
