--- a/themes/Frappe/Maroon/userChrome.css
+++ b/themes/Frappe/Maroon/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #414559 !important;
+        --zen-primary-color: #ea999c !important;
         --zen-colors-secondary: #414559 !important;
         --zen-colors-tertiary: #292c3c !important;
         --zen-colors-border: #ea999c !important;
