--- a/themes/Latte/Lavender/userChrome.css
+++ b/themes/Latte/Lavender/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #ccd0da !important;
+        --zen-primary-color: #7287fd !important;
         --zen-colors-secondary: #ccd0da !important;
         --zen-colors-tertiary: #e6e9ef !important;
         --zen-colors-border: #7287fd !important;
