--- a/themes/Macchiato/Sapphire/userChrome.css
+++ b/themes/Macchiato/Sapphire/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #363a4f !important;
+        --zen-primary-color: #7dc4e4 !important;
         --zen-colors-secondary: #363a4f !important;
         --zen-colors-tertiary: #1e2030 !important;
         --zen-colors-border: #7dc4e4 !important;
