--- a/themes/Mocha/Lavender/userChrome.css
+++ b/themes/Mocha/Lavender/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #313244 !important;
+        --zen-primary-color: #b4befe !important;
         --zen-colors-secondary: #313244 !important;
         --zen-colors-tertiary: #181825 !important;
         --zen-colors-border: #b4befe !important;
