--- a/themes/Mocha/Pink/userChrome.css
+++ b/themes/Mocha/Pink/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #313244 !important;
+        --zen-primary-color: #f5c2e7 !important;
         --zen-colors-secondary: #313244 !important;
         --zen-colors-tertiary: #181825 !important;
         --zen-colors-border: #f5c2e7 !important;
