--- a/themes/Mocha/Teal/userChrome.css
+++ b/themes/Mocha/Teal/userChrome.css
@@ -4,6 +4,7 @@
 
     :root {
         --zen-colors-primary: #313244 !important;
+        --zen-primary-color: #94e2d5 !important;
         --zen-colors-secondary: #313244 !important;
         --zen-colors-tertiary: #181825 !important;
         --zen-colors-border: #94e2d5 !important;
